--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.drawer-side a.active {
+    color: white;
+  }
+  .drawer-side a {
+    background-color: transparent;
+  }
